--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="projects-content">
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/work1.png" alt="Work 1">
+                        <img src="work1.png" alt="Work 1">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Shree balaji steel</h4><span>Agency website</span>
                                 <br><span class="projects-link"><a href="https://shreebalajisteel.odoo.com/" class="projects-href">
@@ -157,7 +157,7 @@
             <div class="projects-content">
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/project1.png" alt="Project 1">
+                        <img src="project1.png" alt="Project 1">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Netflix clone</h4><span>Netflix U/I page</span>
                                 <br><span class="projects-link"><a href="https://github.com/sahil200408/Netflix-clon-page" class="projects-href">
@@ -168,7 +168,7 @@
                 </div>
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/project2.png" alt="Project 2">
+                        <img src="project2.png" alt="Project 2">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Live News</h4><span>News website</span>
                                 <br><span class="projects-link"><a href="https://github.com/sahil200408/Live_News_Website" class="projects-href">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/project3.png" alt="Project 3">
+                        <img src="project3.png" alt="Project 3">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Weather Web App</h4><span>Live weather details</span>
                                 <br><span class="projects-link"><a href="https://github.com/sahil200408/WeatherWebApp" class="projects-href">
@@ -200,7 +200,7 @@
                 </div> 
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/project5.png" alt="Project 5">
+                        <img src="project5.png" alt="Project 5">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Sign in and Sign up page</h4><span>Simple clone</span>
                                 <br><span class="projects-link"><a href="https://github.com/sahil200408/sign-in-sign-up-page" class="projects-href">
@@ -210,7 +210,7 @@
                    
                 </div>  <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/project6.png" alt="Project 6">
+                        <img src="project6.png" alt="Project 6">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>More projects </h4><span></span>
                                 <br><span class="projects-link"><a href="https://github.com/sahil200408" class="projects-href">
@@ -225,7 +225,7 @@
             <div class="projects-content">
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/courses1.png" alt="Course 1">
+                        <img src="courses1.png" alt="Course 1">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Coursera</h4><span>Foundations of Cybersecurity</span>
                                 <br><span class="projects-link"><a href="https://coursera.org/share/63a51e444334df918216caed6f461836" class="projects-href">
@@ -237,7 +237,7 @@
             
                 <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/courses3.png" alt="Course 3">
+                        <img src="courses3.png" alt="Course 3">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Front End</h4><span></span>
                                 <br><span class="projects-link"><a href="https://www.freecodecamp.org/" class="projects-href">
