--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     
                 </div> <div class="project-card">
                     <div class="image-container">
-                        <img src="/image/project4.png" alt="Project 4">
+                        <img src="project4.png" alt="Project 4">
                         <div class="overlay">
                             <div class="proj-txtx"><h4>Game</h4><span>Rock paper Scissor game</span>
                                 <br><span class="projects-link"><a href="https://github.com/sahil200408/Rock_Paper_Scissor_Game" class="projects-href">
